# elena-bot-amino

./: README.md  client.txt  device.json  drevenzz.db  joincomm.py  main.py  pyproject.toml
download/: GP3zFD2_ThE.webm  QNjN7rKi6YA.webm  iK3W9kvsQ_o.webm
sound/: BotAmino.py  main.py
utilities/amino_list/: Cometa451.json  OverLandS144.json  RolplayBrecha.json
