[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
requests = "^2.28.1"
wikipedia = "^1.4.0"
youtube_dl = "^2021.12.17"
fancy-text = "^2.1"
gTTS = "^2.2.4"
lyrics-extractor = "^3.0.1"
"amino.fix" = "^2.3.4"
chistesESP = "^0.0.2"
google-trans-new = "^1.1.9"
DateTime = "^4.6"
amino = "^13.0.1"
urllib3 = "^1.26.12"
ffmpeg = "^1.4"
ffprobe = "^0.5"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
